[package]
name = "taupipp"
version = "0.1.0"
authors = ["nalos"]
edition = "2018"

[dependencies]
bellman = { git = "https://github.com/filecoin-project/bellperson", package = "bellperson", branch = "feat-ipp2" } 
rayon = "1.3.0"
isahc = "1.0.3"

# these crates must be patched with the serde features
#groupy = "0.3.0"
fff = { git = "https://github.com/filecoin-project/ff", branch = "ser-de" }
groupy = { git = "https://github.com/filecoin-project/group", branch = "ser-de" }
#paired = { version = "0.21.0", optional = true }
paired = { git = "https://github.com/filecoin-project/paired", branch = "ser-de" }
