[package]
name = "taupipp"
version = "0.1.0"
authors = ["nikkolasg"]
edition = "2018"

[dependencies]
bellman = { git = "https://github.com/filecoin-project/bellperson", package = "bellperson", branch = "feat-ipp2" } 
rayon = "1.3.0"
isahc = "1.0.3"
groupy = "0.3.0"
paired = { version = "0.21.0" }
sha2 = "0.9"
digest = "0.9.0"
bincode = "1.3.1"

[patch.crates-io]
fff = { git = "https://github.com/filecoin-project/ff", branch = "ser-de" }
groupy = { git = "https://github.com/filecoin-project/group", branch = "ser-de" }
paired = { git = "https://github.com/filecoin-project/paired", branch = "ser-de" }
